--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/react-native": "^5.0.2",
+    "@react-native-community/cli-platform-android": "^10.0.0",
     "@react-native-firebase/app": "^16.4.6",
     "@react-native-firebase/auth": "^16.4.6",
     "@react-native-firebase/firestore": "^16.4.6",
